--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(the-sweeper)
 set(CMAKE_CXX_STANDARD 20)
-set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -pedantic -std=c++20")
+set(GCC_COVERAGE_COMPILE_FLAGS "-Wall -pedantic -std=c++20 -g")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
